--- a/Billit/templates/upload_page.html
+++ b/Billit/templates/upload_page.html
@@ -10,6 +10,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+{% load static %}
 <body>
 
 <nav class="navbar navbar-inverse">
@@ -31,9 +32,7 @@
 <h3> Welcome {{user}} </h3>
 <form action="" method ="post" enctype="multipart/form-data">
   {% csrf_token %}
-  {{ form }}
-    
-  {% if Error %}
+   {% if Error %}
     <p> Error : {{Error}}</p>
   {% endif %} 
       
@@ -43,15 +42,25 @@
       
   {% if Header_error == "Header" %}
     <p> Error : Header is Invalid</p>
-  {% endif %}
+  {% endif %}   
+      
+     <p align='middle'>  <h5><a  href="{%static 'Bulk_uplaod_Template.csv' %}"> Downlaod Template</a></h5></p>
+  <p align='middle'>      
+  {{ form }}
       
       
-      
-      
- <br>      
-<input type="submit" ,value="Find">    
-</form>  
+  </p>  
   
-
+      
+      
+   
+      
+ <br>   
+ <p align='middle'>     
+<input type="submit" ,value="Find">  </p>  
+</form>  
+<p align='center'>
+  
+</p>
 </body>
 </html>
