--- a/Billit/templates/detail.html
+++ b/Billit/templates/detail.html
@@ -50,30 +50,18 @@
   <div class="container" >
       <div class="row">
           <div class="col-md-6">
-                <img src="{{MEDIA_URL}}/{{img}}"  height=500 width=350 class="img-rounded" style="padding:10px"   alt="Product Image" />
+                <img src="{{MEDIA_URL}}/{{object.prod_img}}"  height=500 width=350 class="img-rounded" style="padding:10px"   alt="Product Image" />
           </div>
       
           <div class="col-md-6">
-              <h2><span class="label label-primary">{{cat}} </span></h2>
+              <h2><span class="label label-primary">{{ object.category }} </span></h2>
                    <p style="font-size:150% ; font-family:calibri">
-                      <form action="" method ="post" enctype="multipart/form-data">
-  
-                          {% csrf_token %}
-                          <p>    
-                          <b style="padding-right:7em;">UID &nbsp</b>{{ form.product_id }} <br><br>
-                          <b style="padding-right:5em;">Category</b>{{ form.category }}<br><br>
-                          <b style="padding-right:3em;">Selling Price&nbsp</b>{{ form.sold_price }}<br><br>
-                          <b style="padding-right:1.5em;">Customer Name</b>{{ form.cust_name }}<br><br>
-                          <b style="padding-right:6em;">Mobile</b>{{ form.cust_phone }}<br><br>
-                          <b style="padding-right:6.5em;">Email</b>{{ form.cust_Email }} <br><br> 
-                          </p>
-                          
-                            
-                          {% if Error %}
-                            <p> Error : {{Error}}</p>
-                          {% endif %}  
-                        <input type="submit" class="btn btn-success" value="Bill it">    
-                        </form>  
+                   <b>UID</b> : {{ object.product_id }}<br>
+                   <b>Category</b> : {{ object.category }}<br>
+                   <b>Sold price</b> : {{ object.sold_price }}<br>
+                   <b>Sold by</b> : {{ object.sold_by }}<br>
+                   <b>Induction</b> : {{ object.induction_date }}<br>
+                   <b>Sold on</b> : {{ object.sales_date }}<br>
                    </p>
                 
           </div>  
@@ -87,6 +75,3 @@
     
     
  
-
-
-
