--- a/Billit/templates/base.html
+++ b/Billit/templates/base.html
@@ -9,6 +9,18 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+<style>
+body  {
+    
+    background-color: black;
+    background: url({{MEDIA_URL}}a1.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    
+}
+</style>
 <body>
 
 <nav class="navbar navbar-inverse">
